--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@sellersmith/tailorkit-mcp",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "MCP server for interacting with TailorKit",
   "license": "MIT",
-  "author": "Anthropic, PBC (https://anthropic.com)",
-  "homepage": "https://modelcontextprotocol.io",
-  "bugs": "https://github.com/modelcontextprotocol/servers/issues",
+  "author": "Sellersmith (https://sellersmith.com)",
+  "homepage": "https://github.com/sellersmith/tailorkit-mcp",
+  "bugs": "https://github.com/sellersmith/tailorkit-mcp/issues",
   "type": "module",
   "bin": {
     "mcp-server-tailorkit": "dist/index.js"
